clusters/hive/apps/homeassistant/k8s-manifests/addon-vscode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addon-vscode
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: vscode.home.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: addon-vscode
                port:
                  number: 8443
            path: /
            pathType: Prefix
